--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     />
     <link href="styles/style.css" rel="stylesheet" type="text/css" />
 
-    <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
+    <script src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
     <script src="styles/body/header/header.js" type="text/javascript"></script>
     <script src="styles/body/main/search.js" type="text/javascript"></script>
     <script src="styles/body/footer/footer.js" type="text/javascript"></script>
